--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,13 +1,6 @@
-spring.application.name=app
-spring.sql.init.mode=always
-
-server.port=80
-
-spring.datasource.url=jdbc:h2:file:./Databases/libros;AUTO_SERVER=TRUE
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=saadmin
-spring.datasource.password=m8y2ze2m6gamuhzsyidopasdascdasD
+spring.datasource.url=jdbc:mysql://switchyard.proxy.rlwy.net:10214/railway
+spring.datasource.username=root
+spring.datasource.password=lIxgBxqItfwTQZaYlGBecUaTOTYsQfpk
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.properties.hibernate.format_sql=true
