--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,8 @@
-spring.application.name=app
 spring.sql.init.mode=always
 spring.datasource.url=jdbc:h2:file:./Databases/librosDev;AUTO_SERVER=TRUE
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=saadmin
-spring.datasource.password=1234567
+spring.datasource.password=eJC2KfGE2uU0Q6g
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
