--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,4 @@
+server.port=8080
 spring.sql.init.mode=always
 spring.datasource.url=jdbc:h2:file:./Databases/librosDev;AUTO_SERVER=TRUE
 spring.datasource.driver-class-name=org.h2.Driver
