--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,4 @@
+server.port=8080
 spring.datasource.url=jdbc:mysql://switchyard.proxy.rlwy.net:10214/railway
 spring.datasource.username=root
 spring.datasource.password=lIxgBxqItfwTQZaYlGBecUaTOTYsQfpk
